L05 Replaced all Paths.get() with Path.of()